--- a/crmka/locallibrary/locallibrary/templates/base_generic.html
+++ b/crmka/locallibrary/locallibrary/templates/base_generic.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
-    {% block title %}<title>Local Library</title>{% endblock %}
+    {% block title %}<title>CRM система</title>{% endblock %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -19,13 +19,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2">
-          {% block sidebar %}
-            <ul class="sidebar-nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">All books</a></li>
-              <li><a href="#">All authors</a></li>
-            </ul>
-          {% endblock %}
+<!--          {% block sidebar %}-->
+<!--            <ul class="sidebar-nav">-->
+<!--              <li><a href="#">Home</a></li>-->
+<!--              <li><a href="#">All books</a></li>-->
+<!--              <li><a href="#">All authors</a></li>-->
+<!--            </ul>-->
+<!--          {% endblock %}-->
         </div>
         <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
       </div>
