--- a/crmka/locallibrary/locallibrary/templates/registration/login.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/login.html
@@ -3,15 +3,14 @@
 {% block content %}
 
 {% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
+  <p>Ваше имя пользователя и пароль не совпадают. Попробуйте еще раз.</p>
 {% endif %}
 
 {% if next %}
   {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+    <p>У вашей учетной записи нет доступа к этой странице. Чтобы продолжить, войдите в систему с учетной записью, у которой есть доступ.</p>
   {% else %}
-    <p>Please login to see this page.</p>
+    <p>Пожалуйста, войдите в систему, чтобы увидеть эту страницу.</p>
   {% endif %}
 {% endif %}
 
@@ -35,6 +34,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
 
 {% endblock %}
