--- a/crmka/locallibrary/locallibrary/templates/registration/password_reset_complete.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/password_reset_complete.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <h1>Пароль был изменен!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
+  <p><a href="{% url 'login' %}">Войти снова?</a></p>
 {% endblock %}
