--- a/crmka/locallibrary/locallibrary/templates/base_generic.html
+++ b/crmka/locallibrary/locallibrary/templates/base_generic.html
@@ -10,24 +10,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- Добавление дополнительного статического CSS файла -->
+    <!-- Динамическое подключение CSS файла -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/'|add:css_file %}" />
   </head>
 
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-2">
-<!--          {% block sidebar %}-->
-<!--            <ul class="sidebar-nav">-->
-<!--              <li><a href="#">Home</a></li>-->
-<!--              <li><a href="#">All books</a></li>-->
-<!--              <li><a href="#">All authors</a></li>-->
-<!--            </ul>-->
-<!--          {% endblock %}-->
-        </div>
-        <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+        <!-- Удаляем боковую панель -->
+        <div class="col-sm-10">{% block content %}{% endblock %}</div>
       </div>
     </div>
   </body>
