--- a/crmka/locallibrary/locallibrary/templates/base_generic.html
+++ b/crmka/locallibrary/locallibrary/templates/base_generic.html
@@ -9,18 +9,32 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
     <!-- Динамическое подключение CSS файла -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/'|add:css_file %}" />
+    <link rel="stylesheet" href="{% static 'css/basikPages/mainPage.css' %}" />
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <!-- Удаляем боковую панель -->
-        <div class="col-sm-10">{% block content %}{% endblock %}</div>
-      </div>
-    </div>
-  </body>
+
+    <header>
+      <h1>CRM Колледж</h1>
+      <nav>
+        <ul>
+          <li><a href="{% url 'main_page' %}">Главная</a></li>
+          <li><a href="{% url 'login' %}">Войти</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+    <main>
+      <!-- Внутри base.html оставляем блок контента -->
+      {% block content %}{% endblock %}
+    </main>
+    
+    <footer>
+      <p>CRM Колледж &copy; 2025</p>
+    </footer>
+    
+    </body>
+    </html>
 </html>
