--- a/crmka/locallibrary/catalog/static/css/basikPages/mainPage.css
+++ b/crmka/locallibrary/catalog/static/css/basikPages/mainPage.css
@@ -28,10 +28,10 @@ body {
   left: 0;
   color: transparent; /* Прозрачный цвет текста */
   text-shadow: 
-      2px 2px 0 #ea3bcd, /* Первая тень */
-      -2px -2px 0 #000000, /* Вторая тень */
-      4px 4px 0 #9208a7, /* Третья тень */
-      -4px -4px 0 #000000; /* Четвертая тень */
+      2px 2px 0 #71cf594b, /* Первая тень */
+      -2px -2px 0 #000000f3, /* Вторая тень */
+      4px 4px 0 #000000f1, /* Третья тень */
+      -4px -4px 0 #ea19ea; /* Четвертая тень */
   z-index: -1; /* Помещаем тени за основной текст */
   animation: wave 2s infinite alternate; /* Анимация для эффекта волнистости */
 }
