--- a/crmka/locallibrary/catalog/static/css/basikPages/mainPage.css
+++ b/crmka/locallibrary/catalog/static/css/basikPages/mainPage.css
@@ -1,1 +1,129 @@
+body {
+  background-image: url("{% static 'images/photo.png' %}");
+  background-size: cover; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  color: #74186e96;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.wavy-text {
+  font-size: 48px; 
+  font-weight: bold; 
+  color: #74186e96; 
+  position: relative;
+  display: inline-block;
+}
+
+.wavy-text::before {
+  content: attr(data-text); 
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: transparent; 
+  text-shadow: 
+      2px 2px 0 #71cf594b, 
+      -2px -2px 0 #a02aa6f3, 
+      4px 4px 0 #000000f1,
+      -4px -4px 0 #ea19ea; 
+  z-index: -1; 
+  animation: wave 2s infinite alternate; 
+}
+
+
+@keyframes wave {
+  0% {
+      transform: translateY(0); 
+  }
+  100% {
+      transform: translateY(10px); 
+  }
+}
+
+header h1 {
+  margin: 0 0 0.5rem 0;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start; 
+  gap: 105rem; 
+  margin: 0;
+  padding: 0;
+}
+
+nav a {
+  color: #bb13d1;
+  text-decoration: none;
+  font-size: 1.9rem; 
+  padding: 1.75rem 2.5rem; 
+  border-radius: 5px;
+  transition: background-color 0.3s ease; 
+}
+
+nav a:hover {
+  background-color: rgba(187, 17, 209, 0.252);
+}
+
+main {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 5rem;
+}
+
+footer {
+  color: #75D113;
+  text-align: center;
+  padding: 0.5rem;
+  margin-top: 2rem;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1rem 0;
+}
+
+table, th, td {
+  border: 1px solid #75D113;
+}
+
+th, td {
+  padding: 0.5rem;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.3rem;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.btn-primary {
+  color: #75D113;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background-color: #000000;
+}
 
