--- a/crmka/locallibrary/locallibrary/templates/basikPages/teacherPage.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/teacherPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Личный кабинет преподавателя</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Подключение CSS -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
         <style>
             body {
     font-family: Arial, sans-serif;
-    background-color: #7c7c7c; /* Светло-серый фон, как у студента */
+    background-color: #7c7c7c; 
     margin: 0;
     padding: 0;
     display: flex;
@@ -43,7 +43,7 @@ h1 {
     margin: 10px 0;
     border: none;
     border-radius: 4px;
-    background-color: #89078096; /* Фиолетовый цвет кнопок */
+    background-color: #89078096; 
     color: #d37c24bf;
     font-size: 16px;
     cursor: pointer;
@@ -52,15 +52,15 @@ h1 {
 }
 
 .button:hover {
-    background-color: #5a125a; /* Темно-фиолетовый при наведении */
+    background-color: #5a125a; 
 }
 
 .button.delete {
-    background-color: #950614; /* Красный цвет для кнопки удаления */
+    background-color: #950614; 
 }
 
 .button.delete:hover {
-    background-color: #c82333; /* Темно-красный при наведении */
+    background-color: #c82333; 
 }
         </style>
         
