--- a/crmka/locallibrary/catalog/static/css/basikPages/adminRage.css
+++ b/crmka/locallibrary/catalog/static/css/basikPages/adminRage.css
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Личный кабинет администратора</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Подключение CSS -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <div class="container">
