--- a/crmka/locallibrary/locallibrary/templates/basikPages/teacherPage.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/teacherPage.html
@@ -1,68 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Личный кабинет преподавателя</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="{% static 'css/basikPages/teacherPage.css' %}">
 </head>
 <body>
     <div class="container">
         <h1>Личный кабинет преподавателя</h1>
-        <style>
-            body {
-    font-family: Arial, sans-serif;
-    background-color: #7c7c7c; 
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.container {
-    background-color: #8ce180;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    text-align: center;
-    text-shadow: 1px 1px 4px rgba(60, 17, 60, 0.5); 
-}
-
-h1 {
-    color: #bf23b496; 
-    margin-bottom: 20px;
-}
-
-.button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 4px;
-    background-color: #89078096; 
-    color: #d37c24bf;
-    font-size: 16px;
-    cursor: pointer;
-    text-decoration: none;
-    text-shadow: 1px 1px 4px rgba(60, 17, 60, 0.5); 
-}
-
-.button:hover {
-    background-color: #5a125a; 
-}
-
-.button.delete {
-    background-color: #950614; 
-}
-
-.button.delete:hover {
-    background-color: #c82333; 
-}
-        </style>
         
         <!-- Кнопки для действий -->
         <a href="#" class="button">Посмотреть учебные материалы</a>
