--- a/crmka/locallibrary/locallibrary/templates/basikPages/main.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/main.html
@@ -4,6 +4,8 @@
 {% block content %}
 <!DOCTYPE html>
 <html lang="ru">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/basikPages/mainRage.css' %}" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
