--- a/crmka/locallibrary/locallibrary/templates/basikPages/teacherPage.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/teacherPage.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Личный кабинет преподавателя</title>
     <link rel="stylesheet" href="styles.css"> 
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/basikPages/teacherPage.css' %}" />
 </head>
         <!-- Кнопки для действий -->
         <a href="#" class="button">Посмотреть учебные материалы</a>
