--- a/crmka/locallibrary/locallibrary/templates/basikPages/main.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/main.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/basikPages/mainRage.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/basikPages/mainPage.css' %}" />
     <body>
       <div class="wavy-text" data-text="Добро пожаловать в CRM Колледжа">Добро пожаловать в CRM Колледжа</div>
   </body>
