--- a/crmka/locallibrary/locallibrary/templates/basikPages/studentPage.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/studentPage.html
@@ -10,10 +10,11 @@
 <body>
     <div class="container">
         <h1>Личный кабинет</h1>
-        <a href="#" class="button">Посмотреть учебные материалы</a>
-        <a href="#" class="button">Посмотреть преподавателей</a>
-        <a href="#" class="button">Поменять свои данные</a>
+        <a href="{% url 'education_materials' %}" class="button">Посмотреть учебные материалы</a>
+        <a href="{% url 'list_of_teachers' %}" class="button">Посмотреть преподавателей</a>
+        <a href="{% url 'page_for_change_name' %}" class="button">Поменять свои данные</a>
         <a href="#" class="button delete">Удалить аккаунт</a>
+
     </div>
 </body>
 </html>
