--- a/crmka/locallibrary/locallibrary/templates/registration/password_reset_confirm.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/password_reset_confirm.html
@@ -22,7 +22,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><input type="submit" value="Change my password" /></td>
+          <td><input type="submit" value="Поменять мой пароль" /></td>
         </tr>
       </table>
     </form>
