--- a/crmka/locallibrary/locallibrary/templates/base_generic.html
+++ b/crmka/locallibrary/locallibrary/templates/base_generic.html
@@ -12,6 +12,7 @@
     <!-- Динамическое подключение CSS файла -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/basikPages/mainPage.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/registration/login.css' %}" />
   </head>
 
   <body>
