--- a/crmka/locallibrary/catalog/static/css/registration/login.css
+++ b/crmka/locallibrary/catalog/static/css/registration/login.css
@@ -67,7 +67,7 @@ a:hover {
     max-width: 400px;
     margin: 50px auto;
     padding: 30px;
-    background: white;
+    background: rgb(255, 0, 0);
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -87,7 +87,7 @@ a:hover {
 .input-field {
     width: 100%;
     padding: 12px;
-    border: 2px solid #e0e0e0;
+    border: 2px solid #2d2d2d;
     border-radius: 6px;
     font-size: 14px;
     transition: border-color 0.3s ease;
