--- a/crmka/locallibrary/locallibrary/templates/basikPages/materials.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/materials.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            background: linear-gradient(135deg, #008000, #CD00CD, #000000);
             color: #fff;
             display: flex;
             flex-direction: column;
@@ -44,6 +44,7 @@
             width: 300px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s;
+            text-align: center;
         }
 
         .card:hover {
@@ -62,7 +63,7 @@
 
         .card a {
             display: inline-block;
-            background: #ff9800;
+            background: #CD00CD;
             color: #fff;
             padding: 10px;
             border-radius: 5px;
@@ -71,7 +72,7 @@
         }
 
         .card a:hover {
-            background: #e68900;
+            background: #8B008B;
         }
     </style>
 </head>
