--- a/crmka/locallibrary/locallibrary/templates/basikPages/main.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/main.html
@@ -4,88 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - Колледж</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
-            background: linear-gradient(135deg, #008000, #b92edf, #000000);
-            background-size: 300% 300%;
-            animation: backgroundMove 10s infinite alternate;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            text-align: center;
-        }
-
-        @keyframes backgroundMove {
-            0% {
-                background-position: 0% 0%;
-            }
-            100% {
-                background-position: 100% 100%;
-            }
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
-            animation: glow 2s infinite alternate;
-        }
-
-        @keyframes glow {
-            0% {
-                text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
-            }
-            100% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 1);
-            }
-        }
-
-        .button-container {
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .button {
-            padding: 15px 30px;
-            font-size: 1.5rem;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .button.login {
-            background-color: #288429;
-            color: #fff;
-            backdrop-filter: blur(100px);
-            border: 1px solid rgba(69, 196, 62, 0.2);
-            animation: buttonGlow 2s infinite alternate;
-        }
-
-        @keyframes buttonGlow {
-            0% {
-                box-shadow: 0 0 5px #44ff44;
-            }
-            100% {
-                box-shadow: 0 0 15px #88ff88;
-            }
-        }
-
-        .button:hover {
-            transform: translateY(-5px);
-        }
-    </style>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/basikPages/mainPage.css' %}" />
 </head>
 <body>
     <h1>Добро пожаловать в Колледж</h1>
