--- a/crmka/locallibrary/locallibrary/templates/registration/password_reset_form.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/password_reset_form.html
@@ -1,10 +1,19 @@
 {% extends "base_generic.html" %}
 
+<style>
+  form {
+    display: block; /* Убедитесь, что форма отображается */
+    visibility: visible; /* Убедитесь, что форма видима */
+    position: relative; /* Убедитесь, что форма находится в нужном месте */
+    z-index: 1; /* Убедитесь, что форма не перекрыта другими элементами */
+  }
+</style>
 {% block content %}
   <form action="" method="post">{% csrf_token %}
+    <div class="form">
       {% if form.email.errors %} {{ form.email.errors }} {% endif %}
-          <p>Введите свой email:</p>
           <p>{{ form.email }}</p>
-      <input type="submit" class="btn btn-default btn-lg" value="Сбросить пароль" />
+      <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
+    </div>
   </form>
 {% endblock %}
