--- a/crmka/locallibrary/catalog/static/css/basikPages/teacherPage.css
+++ b/crmka/locallibrary/catalog/static/css/basikPages/teacherPage.css
@@ -1,8 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #7c7c7c; 
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    background: linear-gradient(135deg, #008000, #CD00CD, #000000);
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,43 +15,45 @@ body {
 }
 
 .container {
-    background-color: #8ce180;
+    background: rgba(255, 255, 255, 0.1);
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     width: 400px;
     text-align: center;
-    text-shadow: 1px 1px 4px rgba(60, 17, 60, 0.5); 
+    backdrop-filter: blur(10px);
 }
 
 h1 {
-    color: #bf23b496; 
+    color: #fff;
     margin-bottom: 20px;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
 
 .button {
     display: block;
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     margin: 10px 0;
     border: none;
-    border-radius: 4px;
-    background-color: #89078096; 
-    color: #d37c24bf;
+    border-radius: 8px;
+    background-color: #288429;
+    color: #fff;
     font-size: 16px;
     cursor: pointer;
     text-decoration: none;
-    text-shadow: 1px 1px 4px rgba(60, 17, 60, 0.5); 
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .button:hover {
-    background-color: #5a125a; 
+    transform: translateY(-3px);
+    box-shadow: 0 4px 8px rgba(20, 242, 38, 0.3);
 }
 
 .button.delete {
-    background-color: #950614; 
+    background-color: #950614;
 }
 
 .button.delete:hover {
-    background-color: #c82333; 
+    background-color: #c82333;
 }
